cluster/core/networking/traefik-forward-auth/ingress-route.yaml
---
apiVersion: ingressroutes.traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-forward-auth
  namespace: networking
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`auth.${SECRET_DOMAIN}`)
      kind: Rule
      services:
        - name: traefik-forward-auth
          port: 4181
      middlewares:
        - name: traefik-forward-auth
          namespace: networking
  tls:
    secretName: "auth-${SECRET_DOMAIN/./-}-tls"
